--- a/OOoRTCs.wxs
+++ b/OOoRTCs.wxs
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-    <Product Id="6f9a3445-5fb3-43d9-86ba-d04043724393" UpgradeCode="C2A11673-4647-4FFE-925C-CB877DDEEDD5" Name="OOoRTCs" Version="0.04.0000" Manufacturer="Nobu" Language="1041" Codepage="932">
+    <?define ProductName = "OOoRTCs" ?>
+    <?define ProductVersion = "1.01.0000" ?>
+    <?define ProductCode = "{6f9a3445-5fb3-43d9-86ba-d04043724393}" ?>
+    <?define UpgradeCode = "{C2A11673-4647-4FFE-925C-CB877DDEEDD5}" ?>
+    <Product Id="$(var.ProductCode)" UpgradeCode="$(var.UpgradeCode)" Name="$(var.ProductName)" Version="$(var.ProductVersion)" Manufacturer="Nobu" Language="1041" Codepage="932">
         <Package Id="0f81b974-b71d-4d7c-a02f-c2a7798c7a8f" InstallerVersion="200" Platforms="Intel" Manufacturer="Nobu" Keywords="Installer,MSI,Database" Languages="1041" SummaryCodepage="932" />
         <Media Id="1" Cabinet="Product.cab" EmbedCab="yes" />
         <Directory Id="TARGETDIR" Name="SourceDir">
@@ -283,6 +287,20 @@
         <UIRef Id="WixUI_ErrorProgressText" />
         <UIRef Id="WixUI_Minimal" />
         <UI />
+	<CustomAction Id="ResetProductID" Property="ProductID" Value=""/>
+	<CustomAction Id="DetectNewVer" Error="Error"/>
+    	<InstallUISequence>
+      		<Custom Action="DetectNewVer" After="FindRelatedProducts">NEWPRODUCTFOUND AND NOT Installed</Custom>
+    	</InstallUISequence>
+    	<InstallExecuteSequence>
+	      	<Custom Action="DetectNewVer" After="FindRelatedProducts">NEWPRODUCTFOUND AND NOT Installed</Custom>
+	      	<Custom Action="ResetProductID" Before="ValidateProductID">ProductID="none"</Custom>
+	        <RemoveExistingProducts Suppress="yes"/>
+    	</InstallExecuteSequence>
+	<Upgrade Id="$(var.UpgradeCode)">
+      	<UpgradeVersion Property="NEWPRODUCTFOUND" Minimum="$(var.ProductVersion)" IncludeMinimum="no" OnlyDetect="yes"/>
+      	<Property Id="NEWPRODUCTFOUND" Secure="yes" />
+    	</Upgrade>
         <WixVariable Id="WixUILicenseRtf" Value="License.rtf" />
         <CustomAction Id="unokpg" ExeCommand="[OOoRTCsFolder]unoInstall.bat" Directory="OOoRTCsFolder" Execute="deferred" Return="asyncWait" />
         <InstallExecuteSequence>
